syntax = "proto3";
package influxdata.iox.compactor.v1;
option go_package = "github.com/influxdata/iox/compactor/v1";

import "influxdata/iox/skipped_compaction/v1/skipped_compaction.proto";

service CompactionService {
  // List all skipped compactions in the catalog
  rpc ListSkippedCompactions(ListSkippedCompactionsRequest) returns (ListSkippedCompactionsResponse);

  // Delete a skipped compaction by partition ID
  rpc DeleteSkippedCompactions(DeleteSkippedCompactionsRequest) returns (DeleteSkippedCompactionsResponse);
}

message ListSkippedCompactionsRequest {}

message ListSkippedCompactionsResponse {
  // A list of skipped compactions
  repeated influxdata.iox.skipped_compaction.v1.SkippedCompaction skipped_compactions = 1;
}

message DeleteSkippedCompactionsRequest {
  int64 partition_id = 1;
}

message DeleteSkippedCompactionsResponse {
  // The deleted skipped compaction
  optional influxdata.iox.skipped_compaction.v1.SkippedCompaction skipped_compaction = 1;
}
